; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/hw/efa/extr_efa_main.c_efa_keep_alive.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/hw/efa/extr_efa_main.c_efa_keep_alive.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.efa_admin_aenq_entry = type { i32 }
%struct.efa_dev = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.efa_admin_aenq_entry*)* @efa_keep_alive to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @efa_keep_alive(i8* %0, %struct.efa_admin_aenq_entry* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.efa_admin_aenq_entry*, align 8
  %5 = alloca %struct.efa_dev*, align 8
  store i8* %0, i8** %3, align 8
  store %struct.efa_admin_aenq_entry* %1, %struct.efa_admin_aenq_entry** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.efa_dev*
  store %struct.efa_dev* %7, %struct.efa_dev** %5, align 8
  %8 = load %struct.efa_dev*, %struct.efa_dev** %5, align 8
  %9 = getelementptr inbounds %struct.efa_dev, %struct.efa_dev* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = call i32 @atomic64_inc(i32* %10)
  ret void
}

declare dso_local i32 @atomic64_inc(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
